--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "foodtou",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -20,10 +19,12 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "handlebars": "^4.0.12",
     "jquery": "^3.3.1",
     "moment": "^2.23.0",
     "mongoose": "^5.4.0",
     "path": "^0.12.7",
     "request": "^2.88.0"
-  }
+  },
+  "description": ""
 }
