--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.16.4",
     "handlebars": "^4.0.12",
     "jquery": "^3.3.1",
+    "less": "^3.9.0",
     "moment": "^2.23.0",
     "mongoose": "^5.4.0",
     "path": "^0.12.7",
